rules.v4
# Generated by iptables-save v1.4.21 on Mon Dec  6 15:42:10 2021
*nat
:PREROUTING ACCEPT [3153:206481]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [20:1420]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.20.3/32 -j MASQUERADE
COMMIT
# Completed on Mon Dec  6 15:42:10 2021
# Generated by iptables-save v1.4.21 on Mon Dec  6 15:42:10 2021
*filter
:INPUT DROP [31:1966]
:FORWARD DROP [2860:187000]
:OUTPUT DROP [20:1420]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.2/32 -i eth2 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -i eth2 -o eth0 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth2 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -o eth2 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Dec  6 15:42:10 2021
